[Mac] JavaFX crashes on startup when run on Mac in VMWare

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 8, 9
    • Component/s: javafx
    • 8

        I'm unable to run javafx applications on OSX 10.8 (which is supported platform for java 8)

        java version "1.8.0_77"
        Java(TM) SE Runtime Environment (build 1.8.0_77-b03)
        Java HotSpot(TM) 64-Bit Server VM (build 25.77-b03, mixed mode)

        java -jar javafx-samples-2.2.80/BrickBreaker.jar
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007fff8c20839f, pid=2046, tid=25859
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0_77-b03) (build 1.8.0_77-b03)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.77-b03 mixed mode bsd-amd64 compressed oops)
        # Problematic frame:
        # C [libobjc.A.dylib+0x639f] objc_msgSend_fixup+0x5f
        #
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # An error report file with more information is saved as:
        # /Users/avu/Downloads/hs_err_pid2046.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        # The crash happened outside the Java Virtual Machine in native code.
        # See problematic frame for where to report the bug.
        #
        Abort trap: 6

              Assignee:
              Chien Yang (Inactive)
              Reporter:
              Alexey Ushakov
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: