8154148: [Mac] JavaFX crashes on startup when run on Mac in VMWare

Reviewed-by: ddhill, kcr