modules/graphics/src/main/native-prism-es2/macosx/MacGLFactory.c
@@ -77,6 +77,12 @@ JNIEXPORT jlong JNICALL Java_com_sun_prism_es2_MacGLFactory_nInitialize
     pixelFormat = (jlong) (intptr_t) createPixelFormat(attrs);
     (*env)->ReleaseIntArrayElements(env, attrArr, attrs, JNI_ABORT);
 
+    if (pixelFormat == 0) {
+        // System is incapable of es2 support
+        printAndReleaseResources(0, 0, NULL);
+        return 0;
+    }
+
     context = (jlong) (intptr_t) createContext(NULL, NULL,
             (void *) (intptr_t) pixelFormat, &viewNotReady);
 
