modules/graphics/src/main/native-glass/mac/GlassView3D.m
@@ -93,6 +93,15 @@
         };
         GLint npix = 0;
         CGLError err = CGLChoosePixelFormat(attributes, &pix, &npix);
+        if ((err == kCGLNoError) && (npix == 0))
+        {
+            const CGLPixelFormatAttribute attributes2[] =
+            {
+                kCGLPFAAllowOfflineRenderers,
+                (CGLPixelFormatAttribute)0
+            };
+            err = CGLChoosePixelFormat(attributes2, &pix, &npix);
+        }
         if (err != kCGLNoError)
         {
             NSLog(@"CGLChoosePixelFormat error: %d", err);
